force-app/main/default/objects/OI_Data_Health_Object_Scope__mdt/OI_Data_Health_Object_Scope__mdt.object-meta.xml
<CustomObject>
    <label>OI Data Health Object Scope</label>
    <pluralLabel>OI Data Health Object Scopes</pluralLabel>
    <description
  >Which objects Data Health's Tier-3 batch (Phase 5) profiles, and how many records to sample per object — the concrete mechanism that keeps Data Health "bounded" rather than scanning every object in the org, per ProductSpecs.md's Data Health rule. No records shipped in Phase 1 — populated when Data Health (Phase 5) is built.</description>
</CustomObject>