force-app/main/default/objects/OI_Data_Health_Object_Scope__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <label>Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description
  >Disabling removes this object from Data Health's next run without deleting its sampling configuration.</description>
</CustomField>