force-app/main/default/objects/OI_Data_Health_Object_Scope__mdt/fields/Max_Records_To_Sample__c.field-meta.xml
<CustomField>
    <fullName>Max_Records_To_Sample__c</fullName>
    <label>Max Records To Sample</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <description
  >Hard ceiling on records profiled per run for this object — the bounded-sampling mechanism itself.</description>
</CustomField>