force-app/main/default/objects/OI_Data_Health_Object_Scope__mdt/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <label>Object Api Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>e.g. Account, Contact, Custom_Object__c.</description>
</CustomField>